clean up some vertical spacing issues and other styles; remove extra fonts

--- a/src/styles/image-box.scss
+++ b/src/styles/image-box.scss
@@ -10,7 +10,7 @@
 	overflow: hidden;
 	border: var(--hero-border);
 	padding: var(--padding-sm);
-	margin-bottom: var(--padding-lg);
+	// margin-bottom: var(--padding-lg);
 	clear: both;
 
 	& * + * {
@@ -53,7 +53,7 @@
 		&.active {
 			z-index: 10;
 			opacity: 0.5;
-			transition: opacity 1.33s ease-in;
+			transition: opacity .77s linear;
 		}
 		button {
 			color: white;
